--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
                    <h1 class="main-title">Login</h1>
                 </div>
                <div class="form-row">
-                   Email        
+                   <label class="label" for="Your mail">Your mail <span class="required">*</span></label>
+                   <input class="input" type="Email" placeholder="Email">
                 </div>
                <div class="form-row">
-                   Password
+                   <label class="label" for="Password">Password <span class="required">*</span></label>
+                   <input class="input" type="password" placeholder="Password">
                 </div>
                <div class="form-row">
-                   Remember me + Forgot password?
-                </div>
+                   <input class="checkbox" type="checkbox">
+                   <label class="checkbox-label" for="">Remember me</label>
+                   <a class="forgot-link" href="#">Forgot password?</a>
+                    </div>
                <div class="form-row">
                    Mygtukas Sign-in
                 </div>
