--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prisijungimai</title>
     <link rel="icon" type="image/png" href="./img/favicon.png"/>
+    <link rel="stylesheet" href="./css/reset.CSS">
+    <link rel="stylesheet" href="./css/button.css">
     <link rel="stylesheet" href="./css/main.css">
-</head>
+    </head>
 <body>
     <div class="container"> 
         <img class="left" src="./img/Untitled.png" alt="mergina">
@@ -29,7 +31,7 @@
                    <a class="forgot-link" href="#">Forgot password?</a>
                     </div>
                <div class="form-row">
-                   Mygtukas Sign-in
+                <div class="btn">Sign in</div>
                 </div>
             </form>
             <div class="form-bottom">
