home btn and chckbx left

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Prisijungimai</title>
     <link rel="icon" type="image/png" href="./img/favicon.png"/>
     <link rel="stylesheet" href="./css/reset.CSS">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/button.css">
     <link rel="stylesheet" href="./css/main.css">
     </head>
@@ -35,7 +36,17 @@
                 </div>
             </form>
             <div class="form-bottom">
-                VISA KITA
+               <p class="">or login with</p> 
+               <div class="icon-list">
+                   <i class="fa fa-facebook"></i>
+                   <i class="fa fa-github"></i>
+                   <i class="fa fa-twitter"></i>
+                   <i class="fa fa-gitlab"></i>
+               </div>
+               <div class="extra-link">
+                    <p>dont have an account?</p>
+                    <a href="#">Sign up</a>
+               </div>
             </div>
         </div> 
     </div>
