--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
                <div class="form-row">
                    <label class="label" for="Your mail">Your mail <span class="required">*</span></label>
                    <input class="input" type="Email" placeholder="Email">
+                   <i class="fa fa-user-o"></i>
                 </div>
                <div class="form-row">
                    <label class="label" for="Password">Password <span class="required">*</span></label>
                    <input class="input" type="password" placeholder="Password">
+                   <i class="fa fa-key"></i>
                 </div>
                <div class="form-row">
                    <input class="checkbox" type="checkbox">
