--- a/recovery/index.html
+++ b/recovery/index.html
@@ -22,6 +22,7 @@
                 <div class="form-row">
                     <label class="label" for="Your mail">Email adress<span class="required">*</span></label>
                     <input class="input" type="Email" placeholder="Email">
+                    <i class="fa fa-key"></i>
                  </div>
                 <div class="form-row">
                     <div class="btn">Sign in</div>
