Class(konteineris, desine, kaire)

--- a/recovery/index.html
+++ b/recovery/index.html
@@ -21,11 +21,11 @@
                  </div>
                 <div class="form-row">
                     <label class="label" for="Your mail">Email adress<span class="required">*</span></label>
-                    <input class="input" type="Email" placeholder="Email">
-                    <i class="fa fa-user-o"></i>
+                    <input class="input" type="Email" placeholder="Enter Your Email Adress">
+                    <i class="fa fa-envelope-o"></i>
                  </div>
                 <div class="form-row">
-                    <div class="btn">Sign in</div>
+                    <div class="btn">Send</div>
                  </div>
              </form>
              <div class="form-bottom">
